tests/error/04_operator.py
# Incorrect types in operation
# Type Checker Error: Type mismatch on Binary Operator left=Type<float> right=Type<str>
a: float = 1.0 + "str"
